--- a/landing-page/src/index.css
+++ b/landing-page/src/index.css
@@ -1,13 +1,198 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+* {
+  margin: 0px;
+}
+body{
+  font-family: "Kodchasan";
+  color: #002845;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*HEADER*/
+#header-nav {
+  background-color: #FFFFFF;
+  height: 84px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
+  #nav_content {
+    width: 100%;
+    list-style: none;
+    padding: 0px 28px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #002845;
+    font-family: "Hind Madurai";
+    font-size: 24px;
+  }
+      #nav_content a {
+        text-decoration: none;
+        font-family: inherit; 
+        color:inherit;
+      }
+          #nav_content a:hover {
+              color: #F64975
+          }
+
+#nav_left {
+  display: flex;
+  padding-left: 169px;
+  padding-right: 10%;
+  align-items: center;
+  justify-content: flex-start;
+}
+#app-name {
+  font-size:48px;
+  font-family: Kodchasan;
+  font-weight: bold;
+  line-height: 62px;
+  text-decoration-line: underline;
+}
+#search-txtbox li:not(:last-child) {
+  margin-right: 12px;
+}
+#search-input {
+  border-style: solid;
+  border-radius: 20px;
+  height: 38px;
+  background-color: #DEEAF4;
+  border-color: #DEEAF4;
+  appearance: none;    
+  background: url("../src/img/search_icon.svg") no-repeat scroll;
+  background-position: center right;
+  padding-left:30px;
+  background-origin: content-box, padding-box;
+}
+#search-input[type=text] {
+  font-family: "Kodchasan";
+  font-size: 16px;
+  color: #686565;
+  width: 519px;
+  padding: 20px;
+  margin: 10px;
+  box-sizing: border-box;
+}
+#nav_content div{
+  display: flex;
+  justify-content: flex-start;
+}
+#header-contactanos {
+  display: flex;
+  gap: 9px;
+}
+/*HEADER END*/
+
+/*MAIN SECTION*/
+.section {
+  width: 100%;
+  max-width: 1440px;
+  height: 582px;
+  background-image: url("../src/img/Background.png");
+}
+#main-txt {
+  position: relative;
+  left: 227px;
+  top: 109px;
+  width: 426px;
+  height: 317px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+}
+.text40 {
+  font-size: 40px;
+  font-weight: bold;
+  width: 100%;
+}
+.text15 {
+  font-size: 15px;
+  font-weight: bold;
+  width: 100%;
+}
+.main-txt-lst {
+  font-size:13px;
+  padding: 0;
+  list-style-type: none;
+}
+.main-txt-lst li{
+  display: flex;
+  align-items: center;
+}
+  .main-txt-lst img {
+      width: 21px;
+      height: 19px;
+      padding: 3px 5px; 
+  }
+/*MAIN SECTION END*/
+
+/*GUIAS SECTION*/
+#section-guias {
+  background: #EFFBFB;
+  width: 100%;
+  max-width: 1440px;
+  height: 489px;
+}
+#section-guias a:hover {
+  color: #F64975
+}
+#guias-header {
+  width: 100%;
+  padding-top: 36px;
+  padding-bottom: 29px;
+}
+  #guias-header ul {
+      list-style-type: none;
+      padding: 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+  }
+  #guias-header li {
+      font-size: 24px;
+      padding: 0 33px;
+  }
+  #guias-header a {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      font-size: 14px;
+  }
+
+#guias-lst {
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  padding: 0 33px;
+}
+  #guias-lst a {
+      text-decoration: none;
+      color:inherit;
+  }
+  #guias-lst li {
+      width: 321px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+  }
+      #guias-lst img {
+          align-self: center;
+          width: 100%;
+          height: auto;
+      }
+      #guias-lst h2 {
+          padding-top: 9px;
+          font-size: 20px;
+      }
+      #guias-lst li p {
+          font-family: Hind Madurai;
+          padding-top: 12px;
+          font-size: 16px;
+          width: 100%;
+          color: #686565;
+      }
+
+/*GUIAS SECTION end*/
