--- a/landing-page/src/index.css
+++ b/landing-page/src/index.css
@@ -196,3 +196,185 @@ body{
       }
 
 /*GUIAS SECTION end*/
+
+/*card css*/
+.card{
+  position: relative;
+  width: 250px;
+  height: 290px;
+  background-color: #fff;
+  border-radius: 5px;
+  top: 96px;
+}
+.card-image{
+  position:absolute;
+  height: 200px;
+  width: 250px;
+  border-radius: 5px;
+}
+
+.card-image .card-img{
+  height: 100%;
+  width: 100%;
+  object-fit:cover;
+  border-radius: 5px;
+
+}
+.card-profile-img {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  top:205px;
+  left: 12px;
+  border-radius: 38.2609px;
+}
+.card-profile-img{
+  width: 80px;
+  height: 80px;
+}
+.card-profile-img .card-prof-img{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  border-radius: 38.2609px;
+}
+.card-content{
+  position: absolute;
+  width: 149px;
+  height: 47px;
+  left: 101px;
+  top: 222px;
+  font-family: 'Kodchasan';
+  
+}
+.card-content .art-name{
+  font-size: 16px;
+  font-weight: bold;
+  color: #002845;
+  line-height: 0;
+  margin: 0;
+  padding: 0px;
+  
+}
+.card-content .artits-name{
+  font-size: 14px;
+  font-weight: 400;
+  color: #95979d;
+  padding-top: 0;
+  margin: 0;
+  line-height: 0;
+}
+/*end card css*/
+
+/*slider*/
+.cards{
+  display: flex;
+  justify-content: space-between;
+  width: 86%;
+  height: 100%;
+  margin: -86px 115px;
+  padding-top: 36px;
+}
+
+#slider {
+  margin: 0;
+  width: 1440px;
+  max-width: 100%;
+  
+}
+#slider input[type=radio] {
+  display: none;
+}
+#slider label {
+  cursor:pointer;
+  text-decoration: none;
+}
+#slides {
+  padding: 0;
+  background: #DEEAF4;
+  position: relative;
+ 
+}
+#overflow {
+  width: 100%;
+  overflow: hidden;
+}
+#slide1:checked ~ #slides .inner {
+  margin-left: 0;
+}
+#slide2:checked ~ #slides .inner {
+  margin-left: -100%;
+}
+#slide3:checked ~ #slides .inner {
+  margin-left: -200%;
+}
+#slides .inner {
+  transition: margin-left 800ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+  width: 400%;
+  height: 440px;
+}
+#slides .slide {
+  width: 25%;
+  float:left;
+ 
+  height: 100%;
+}
+#controls {
+  margin: -200px 0 0 0;
+  width: 100%;
+  height: 50px;
+  z-index: 3;
+  position: relative;
+}
+#controls label {
+  transition: opacity 0.2s ease-out;
+  display: none;
+  width: 64px;
+  height: 64px;
+  opacity: .6;
+}
+#controls label:hover {
+  opacity: 1;
+}
+#slide1:checked ~ #controls label:nth-child(2),
+#slide2:checked ~ #controls label:nth-child(3),
+#slide3:checked ~ #controls label:nth-child(4) {
+  background: url("/src/img/next.png") no-repeat;
+  float:right;
+  margin: -75px 0 0 0;
+  display: block;
+}
+#slide1:checked ~ #controls label:nth-last-child(4),
+#slide2:checked ~ #controls label:nth-last-child(3),
+#slide3:checked ~ #controls label:nth-last-child(2) {
+  background: url("/src/img/previous.png") no-repeat;
+  float:left;
+  margin: -75px 0 0 0;
+  display: block;
+}
+#bullets {
+  text-align: center;
+  margin: 150px 0 0;
+}
+#bullets label {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius:100%;
+  background: #ccc;
+  margin: 0 10px;
+}
+#slide1:checked ~ #bullets label:nth-child(1),
+#slide2:checked ~ #bullets label:nth-child(2),
+#slide3:checked ~ #bullets label:nth-child(3) {
+  background: #002845;
+}
+
+.subtitulo{
+  width: 100%;
+}
+
+.bk{
+  background: #DEEAF4;
+}
+/*end slider*/
