--- a/landing-page/src/index.css
+++ b/landing-page/src/index.css
@@ -378,3 +378,106 @@ body{
   background: #DEEAF4;
 }
 /*end slider*/
+
+/*footer*/
+footer {
+  background-color: #F5F5F5;
+  color: #000000;
+  position: relative;
+  font-size: 14px;
+  width: 1440px;
+}
+
+.subcribe {
+  font-family: Kodchasan;
+  color: #002845;
+  font-weight: bold;
+  list-style: none;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 266px;
+  height: 149px;
+  left: 100px;
+  top: 40px;
+}
+
+.subcribe li {
+  padding-top: 10px;
+  font-size: 12px;
+}
+
+.foot {
+  padding-right: 50px;
+  font-family: Inder;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.foot ul {
+  width: 116px;
+  padding-left: 20px;
+  padding-right: 30px;
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+}
+
+.foot th {
+  font-size: 20px;
+}
+
+.foot a {
+  text-decoration: none;
+  color: #000000;
+  font-family: "Inder";
+}
+
+.foot ul li {
+  padding-top: 14.5px;
+}
+
+#subscribe-main li{
+  font-size: 24px;
+}
+
+#button-suscribirse {
+  width: 151px;
+  height: 34px;
+  background: #F64975;
+  color: #FFFFFF;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  border-radius: 12px;
+}
+
+#button-suscribirse li {
+  padding-bottom: 10px;
+}
+
+#correo-suscribete-input {
+  width: 266px;
+  height: 38px;
+  background: #DEEAF4;
+  color: #686565;
+  border-radius: 20px;
+  padding-left: 10px;
+}
+.image {
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 66px;
+  padding-bottom: 20px;
+  list-style: none;
+}
+.image img {
+  height: 25px;
+  width: auto;
+  padding-left: 5px;
+}
+
+/* footer end */
