--- a/landing-page/src/index.css
+++ b/landing-page/src/index.css
@@ -459,13 +459,15 @@ footer {
   padding-bottom: 10px;
 }
 
-#correo-suscribete-input {
+#correo-suscribete-input input{
   width: 266px;
   height: 38px;
   background: #DEEAF4;
   color: #686565;
   border-radius: 20px;
   padding-left: 10px;
+  font-family: Kodchasan;
+  border-style: none;
 }
 .image {
   display: flex;
@@ -481,9 +483,3 @@ footer {
 }
 
 /* footer end */
-.artistas{ 
-  width: 1440px;
-height: 500px;
-background: #FFF1F4;
-margin-bottom: 0;
-}
